# dev-tools

./: .gitignore  LICENSE  README.md  check_all.sh  setup.sh  test_debug.sh
.github/workflows/: command_reloader_ci.yml  lint.yml  shell_commands_ci.yml  text_aggregator_ci.yml
command_reloader_tool/: README.md  pyproject.toml
command_reloader_tool/command_reloader/: listener.py  reloader.py
command_reloader_tool/listeners/: linux_listener.py  mac_listener.py
command_reloader_tool/tests/: test_listeners.py  test_reloader.py
shell_commands/: README.md  git_aliases.sh  git_workflow_tools.sh  git_worktree_tools.sh  init.sh  python_tools.sh  utils.sh
shell_commands/git_tools/: aliases.sh  diff.sh  exec.sh  index.sh  sync.sh  worktree.sh
shell_commands/tests/: test_diff_context.py  test_shell_tools.py
text_aggregator_tool/: README.md  pyproject.toml
text_aggregator_tool/tests/: test_aggregator.py
text_aggregator_tool/text_aggregator/: aggregator.py  default_config.json
