[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "command-reloader"
version = "0.0.1"
authors = [
  { name="Audrow" },
]
license = {text = "MIT"}
description = "A tool to restart a command when git-tracked files change."
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/audrow/dev-tools"
"Bug Tracker" = "https://github.com/audrow/dev-tools/issues"

[project.scripts]
command-reloader = "command_reloader.reloader:main"
command-trigger-listener = "command_reloader.listener:main"
