[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "text-aggregator"
version = "0.0.1"
authors = [
  { name="Audrow" },
]
license = {text = "MIT"}
description = "A simple text aggregator"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pyperclip>=1.8.2",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/audrow/dev-tools"
"Bug Tracker" = "https://github.com/audrow/dev-tools/issues"

[project.scripts]
text-aggregator = "text_aggregator.aggregator:main"

[tool.setuptools.package-data]
text_aggregator = ["*.json"]
